@@ -1,9 +1,13 @@
 # $Id$
 
-pkglibdir = @OPENPAM_MODULES_DIR@
+if CUSTOM_MODULES_DIR
+moduledir = @OPENPAM_MODULES_DIR@
+else
+moduledir = $(libdir)
+endif
 AM_CPPFLAGS = -I$(top_srcdir)/include
 
-pkglib_LTLIBRARIES = pam_permit.la
+module_LTLIBRARIES = pam_permit.la
 
 pam_permit_la_SOURCES = pam_permit.c
 pam_permit_la_LDFLAGS = -no-undefined -module -version-info @LIB_MAJ@ \
